--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,4 +19,13 @@ a{
 .app{
   width: 80%;
   margin: auto;
+  margin-top: 20px;
+}
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
 }
