--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -44,6 +44,10 @@
     background-color: grey;
     border: none;
 }
+.tagline{
+    color: tomato;
+    font-weight: 500;
+}
 
 @media (max-width:750px){
     .footer-content{
