--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,9 +1,9 @@
-/* .navbar{
+.navbar{
     padding: 20x 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-} */
+}
 
 .navbar {
     position: fixed; /* Sticks it to the viewport */
@@ -15,7 +15,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: white; /* Adjust if necessary */
-    z-index: 1000; /* Ensures it's above other elements */
+    z-index: 1000; /*Ensures it's above other elements */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds a slight shadow */
 }
 
@@ -97,6 +97,27 @@ body {
         padding: 8px 25px;
     }
  }
+ .navbar-profile{
+    position: relative;
+ }
+ .nav-profile-dropdown{
+    position: absolute;
+    display: none;
+    right: 0;
+    z-index: 1;
+ }
+ .navbar-profile:hover .nav-profile-dropdown{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fff2ef;
+    padding: 12px 25px;
+    border-radius: 4px;
+    border: 1px solid tomato;
+    outline: 2px solid white;
+    list-style: none;
+ }
+
 
  @media (max-width:900px){
     .navbar .logo{
