--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -42,6 +42,7 @@ body {
     display: flex;
     align-items: center;
     gap: 40px;
+    margin-right: 70px;
 }
 
 .navbar button{
@@ -117,7 +118,18 @@ body {
     outline: 2px solid white;
     list-style: none;
  }
-
+ .nav-profile-dropdown li{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+ }
+.nav-profile-dropdown img{
+    width: 20px;
+}
+.nav-profile-dropdown li:hover{
+    color: tomato;
+}
 
  @media (max-width:900px){
     .navbar .logo{
